# BookingWebScraping_EventTimePrices

./: README.md  booking_group1_valencia.ipynb  booking_scraping_ta_session_p1.ipynb  main.py  pyproject.toml  scraping_ts.ipynb
